[package]
name = "tools"
version = "0.0.7"
edition = "2021"
authors = ["wjz"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
eframe = {version = "0.22.0" }
egui_extras = {version = "0.22.0",features =  ["chrono"]}
catppuccin-egui = "3.1"
tokio = { version = "1.22", features = ["full"] }
chrono =  "0.4"
tiberius={version="0.12.2",features = ["chrono","rustls","tds73",],default-features = false}
tokio-util = { version = "0.7.8", features=["compat"]}

rust_xlsxwriter = "0.49.0"
image = {version = "0.24", features = ["ico"]}
reqwest = { version = "0.11", features = [ "json","multipart"] }
serde_json = "1.0"



[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]



# [target.'cfg(target_os = "macos")'.dependencies]
# fruitbasket = "0.10.0"

# [target.'cfg(windows)'.build-dependencies]
# # this currently causes a link error LNK1356, check in the future if the problem was solved
# windres = "0.2.1"

# [build-dependencies]
# env_logger = "0.10.0"
# log = "0.4.14"
# winres = "0.1"

# [dev-dependencies]
# cmd_lib = "1.3.0"

[profile.release]
codegen-units = 1
# incremental = false
lto = true
strip = true
opt-level = 3
panic = "abort"


