[package]
name = "tools"
version = "0.0.7"
edition = "2021"
authors = ["wjz"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
eframe = {version = "0.23.0" }
egui_extras = {version = "0.23.0",features =  ["chrono","all_loaders"]}
tokio = { version = "1.22", features = ["full"] }
chrono =  "0.4"
tiberius={version="0.12.2",features = ["chrono","rustls","tds73",],default-features = false}
tokio-util = { version = "0.7.8", features=["compat"]}

rust_xlsxwriter = "0.51.0"
image = {version = "0.24", features = ["ico","png"]}
reqwest = { version = "0.11", features = [ "json","multipart"] }
serde_json = "1.0"



[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3


[build-dependencies]
embed-resource = "2.4"


